--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@react-native-picker/picker": "^2.4.6",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "axios": "^1.2.0",
     "react": "18.1.0",
     "react-native": "0.70.1",
+    "react-native-date-picker": "^4.2.6",
     "react-native-safe-area-context": "^4.3.4",
-    "react-native-screens": "^3.17.0"
+    "react-native-screens": "^3.17.0",
+    "start": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
